Fix accordion panel height transitions
The uneven movement at the start and end of accordion panel height transitions is caused by the element content height which can never be negative as would be the case when the panel height is set to 0 but some padding is defined. An additional wrapper div is required to get around this.

--- a/source/components/accordion.scss
+++ b/source/components/accordion.scss
@@ -58,14 +58,6 @@
   }
 
   &-panel {
-    padding-top: $space-small-e;
-    padding-bottom: $space-regular;
-
-    @at-root .accordion-segment:last-child & {
-      padding-bottom: calc(#{$space-regular} - #{$border-width-regular});
-      border-bottom: $border-width-regular solid $color-neutral-light-c;
-    }
-
     &.is-hidden {
       display: none;
     }
@@ -83,6 +75,16 @@
 
     p:last-child {
       margin-bottom: 0;
+    }
+  }
+
+  &-panel-inside {
+    padding-top: $space-small-e;
+    padding-bottom: $space-regular;
+
+    @at-root .accordion-segment:last-child & {
+      padding-bottom: calc(#{$space-regular} - #{$border-width-regular});
+      border-bottom: $border-width-regular solid $color-neutral-light-c;
     }
   }
 }
